#4: Fix NPM package installation
  * Modify Responses API Request to include Optional
    parameters for the request as well
  * Add bin to package.json
  * Add /dist build output directory to .gitignore

--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "openai-websearch-mcp",
-  "version": "1.0.0",
+  "version": "1.1.1",
   "description": "MCP server implementation OpenAI WebSearch",
   "main": "dist/index.js",
+	"bin": {
+		"openai-websearch-mcp": "./dist/index.js"
+	},
   "type": "module",
   "scripts": {
     "build": "tsc",
